# qfabric

./: .gitignore  ARTIFACT.md  ASSUMPTIONS.md  CITATION.cff  CONCEPTS.md  LICENSE  PRIMER.md  README.md  REVIEW_2026-07-06.md  ROADMAP.md  SPEC.md  pyproject.toml  requirements.txt
docker/: Dockerfile.bmv2
kiso/: experiment-fabric.yml
notebooks/: 00_overview.ipynb  01_setup_slice.ipynb  02_run_experiment.ipynb  03_cross_validation.ipynb  04_analysis.ipynb  05_run_all_scenarios.ipynb  07_sequence_emulator.ipynb  08_sequence_scenarios.ipynb  09_entanglement_e91.ipynb  10_eavesdropper.ipynb  11_reconciliation.ipynb  12_repeater.ipynb  13_qkd_security.ipynb
paper/: make_figures.py
qne/: __init__.py  __main__.py  alice.py  auth.py  bb84.py  bob.py  cascade.py  channel.py  cli.py  config.py  decoy.py  detector.py  eve.py  finite_key.py  metrics.py  photon.py  privacy.py  reconcile.py
qne-sequence/: DESIGN.md  README.md  bench_throughput.py  plots.py  sweep.py
results/: decoy_scenarios.json  fabric_alice_results.json  fabric_bob_results.json  fabric_e91_alice.json  fabric_e91_bob.json  fabric_seq_alice.json  fabric_seq_bob.json
scripts/: decoy_sweep.py  deploy_fabric.py  install_bmv2.sh  package_artifact.sh  setup_netsquid_env.sh  setup_sequence_env.sh  setup_switch_docker.sh
tests/: __init__.py  test_auth.py  test_bb84.py  test_cascade.py  test_decoy.py  test_detector.py  test_detector_realism.py  test_eve.py  test_finite_key.py  test_metrics.py  test_photon.py  test_privacy.py  test_raw_path_reconcile.py  test_validation.py
validation/: __init__.py  compare.py  (+5 more)
(+55 files in other folders)
